k8s/namespace-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codeconductor-demo
  labels:
    name: codeconductor-demo
    purpose: demo
