k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codeconductor
  labels:
    name: codeconductor
    app: codeconductor
    environment: production
